--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "man.movement",
   "version": "0.0.1",
-  "description": "Man Movement",
+  "description": "EMPLOYEE ACTION",
   "keywords": [
     "ui5",
     "openui5",
@@ -26,5 +26,18 @@
     "unit-tests": "fiori run --config ./ui5-mock.yaml --open 'test/unit/unitTests.qunit.html'",
     "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'"
   },
-  "sapuxLayer": "CUSTOMER_BASE"
+  "sapuxLayer": "CUSTOMER_BASE",
+  "ui5": {
+    "ui5linter": {
+      "idNamingPattern": "",
+      "eventNamingPattern": "",
+      "attributesToCheck": [
+        "content",
+        "items",
+        "value",
+        "text",
+        "number"
+      ]
+    }
+  }
 }
